Updated hw files for all modules

--- a/modules/5507-01-hw.md
+++ b/modules/5507-01-hw.md
@@ -8,17 +8,13 @@ title: "MEDB 5507, Introduction to SAS, Module01, Homework"
 
 Graded: 3 points, one point deducted if submitted late.
 
-Download the following files
-
-Submit your work [here]()
+Take the code in your-first-program.sas and run it on your system. If you get an error message that you can't fix, document that error message in the text box. You will get full credit for any reasonable attempt to get the program to run. If your program ran successfully, describe your difficulties (if any) in getting the program to run. 
 
 #### Discuss01
 
-Graded: 3 points, one point deduction if submitted after the deadline.
-
-Submit your comments [here]().
+Please briefly introduce yourself. Tell us a bit about yourself professionally, and optionally tell us one thing that is not related to your work or your career. Also optional, but greatly appreciated, would be a picture of yourself.
 
 #### Quiz01
 
-Graded: 3 points, one point deducted if submitted late.
+Not available yet.
 
