--- a/modules/5507-02-hw.md
+++ b/modules/5507-02-hw.md
@@ -8,17 +8,22 @@ title: "MEDB 5507, Introduction to SAS, Module02, Homework"
 
 Graded: 3 points, one point deducted if submitted late.
 
-Download the following files
-
-Submit your work [here]()
+Read the data in the file sleep.txt or in the file sleep_modified.txt and print out the first ten rows of data. Include your code and your output in a single PDF file.
 
 #### Discuss02
 
 Graded: 3 points, one point deduction if submitted after the deadline.
 
-Submit your comments [here]().
+I'd like some brief feedback to the videos you just watched. Keep it short. One or two sentences per question is fine. You can also say something briefer like "I agree with [other student]". If you found everything confusing or nothing confusing, just respond with the word "everything" or "nothing." Please don't spend more than a minute on this assignment. I just want a quick reaction.
+
+1. What was the most important thing you learned in these videos?
+
+2. What was the one thing that you found confusing?
+
+3. What would you like to see covered next?
 
 #### Quiz02
 
 Graded: 3 points, one point deducted if submitted late.
 
+Not yet available.
