--- a/modules/5507-03-hw.md
+++ b/modules/5507-03-hw.md
@@ -8,17 +8,82 @@ title: "MEDB 5507, Introduction to SAS, Module03, Homework"
 
 Graded: 3 points, one point deducted if submitted late.
 
-Download the following files
+Homework03.
 
-Submit your work [here]()
+Having reviewed these analyses, I would like
+you to turn in some simple analyses that you
+run on a fresh data set. This homework
+assignment will be graded pass/fail.
+
+There is a second data set on sleep in
+mammals. You can find a brief description of
+this data set at
+
+--> http://www.statsci.org/data/general/sleep.html
+
+and you can download the actual data at
+
+--> http://www.statsci.org/data/general/sleep.txt
+
+For every question, include the relevant SAS
+output and a brief written commentary explaining
+what the results mean. When you send your
+answers, please include the original questions.
+
+1. Notice that there is a huge range in body
+weight. Display the information for the
+smallest and the largest mammals.
+
+2. Which variables have missing data?
+
+3. Calculate the mean and standard deviation
+for TotalSleep.
+
+4. Draw a histogram for the BodyWt variable.
+Note that this variable is highly skewed.
+Re-draw the histogram on the log scale.
+For exta credit, relabel the axes with values
+at 0.001, 0.01, etc.
+
+5. Calculate the ratio of BrainWt to BodyWt
+and express it as a percentage. Be sure to
+convert grams to kilograms (or vice versa)
+before computing the ratio. What animal has
+the smallest/largest ratio?
+
+6. Do bigger animals sleep longer or live
+longer? Show your results using a correlation
+coefficient.
+
+7. Do animals who have high degrees of
+Predation, Exposure, or Danger sleep less?
+Show your results using a plot and a trendline.
+
+8. Place all the key results into a document
+and copy the original questions and include
+your own written answer along with the
+appropriate supporting tables or graphs.
+Do NOT submit uneditted and unannoted
+SAS output. You can use any program to
+prepare the output, but convert it to a PDF
+format before submission. If you have any
+difficulty producing a PDF document, please
+talk to me.
 
 #### Discuss03
 
 Graded: 3 points, one point deduction if submitted after the deadline.
 
-Submit your comments [here]().
+I'd like some brief feedback to the videos you just watched. Keep it short. One or two sentences per question is fine. You can also say something briefer like "I agree with [other student]". If you found everything confusing or nothing confusing, just respond with the word "everything" or "nothing." Please don't spend more than a minute on this assignment. I just want a quick reaction.
+
+1. What was the most important thing you learned in these videos?
+
+2. What was the one thing that you found confusing?
+
+3. What would you like to see covered next?
 
 #### Quiz03
 
 Graded: 3 points, one point deducted if submitted late.
 
+Not yet available.
