--- a/modules/5507-04-hw.md
+++ b/modules/5507-04-hw.md
@@ -8,15 +8,38 @@ title: "MEDB 5507, Introduction to SAS, Module04, Homework"
 
 Graded: 3 points, one point deducted if submitted late.
 
-Download the following files
+The Gardasil vaccine requires three shots in order to be effective. A study conducted at Johns Hopkins looked at how often patients failed to get all three shots. They wanted to see if insurance status, age, and other factors could predict who was at greatest risk for failing to get all three shots.
 
-Submit your work [here]()
+The data set is available as an Excel spreadsheet at
+
+http://www.amstat.org/publications/jse/v19n1/gardasil.xls
+
+and a description of the file is available at
+
+http://www.amstat.org/publications/jse/v19n1/gardasil.txt
+
+Q1. Create factors for AgeGroup, Race, Completed, Location.
+
+Q2. Report which variables have missing data and how many of these values are missing.
+
+Q3. What proportion of patients completed all three shots?
+
+Q4. Draw a bar chart showing the percentage of patients at each of the four locations.
+
+Q5. Use a crosstabulation to compare Age to AgeGroup, and Location to LocationType. Are the recodings into AgeGroup and LocationType done properly?
+
+Q6. Create a new variable that combines the race categories into white, and non-white. Calculate the proportion of white patients at each of the four locations.
 
 #### Discuss04
 
 Graded: 3 points, one point deduction if submitted after the deadline.
 
-Submit your comments [here]().
+I'd like some brief feedback to the videos you just watched. Keep it short. One or two sentences per question is fine. You can also say something briefer like "I agree with [other student]". If you found everything confusing or nothing confusing, just respond with the word "everything" or "nothing." Please don't spend more than a minute on this assignment. I just want a quick reaction.
+1. What was the most important thing you learned in these videos?
+
+2. What was the one thing that you found confusing?
+
+3. What would you like to see covered next?
 
 #### Quiz04
 
