--- a/modules/5507-04-videos.md
+++ b/modules/5507-04-videos.md
@@ -16,8 +16,38 @@ date: Created 2021-05-29
 + Video available in [Panopto format][m04v02]
 + See above for slides and speaker notes
 
+#### M04-V03. Review, part 1
++ Video available in [Panopto format][m04v03]
++ No slides or speaker notes available
+
+#### M04-V03. Review, part 2
++ Video available in [Panopto format][m04v04]
++ No slides or speaker notes available
+
+#### M04-V03. Review, part 3
++ Video available in [Panopto format][m04v05]
++ No slides or speaker notes available
+
+#### M04-V03. Review, part 4
++ Video available in [Panopto format][m04v06]
++ No slides or speaker notes available
+
+#### M04-V03. Review, part 5
++ Video available in [Panopto format][m04v07]
++ No slides or speaker notes available
+
+#### M04-V03. Review, part 6
++ Video available in [Panopto format][m04v08]
++ No slides or speaker notes available
+
+
 [git1]: https://umkc.instructure.com/courses/68719/modules/items/1002182
 
 [m04v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=eb10e8d6-dda8-4524-922e-aa840177f72b
 [m04v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=be1f9d24-b3eb-4ff1-a4cf-aa8401812727
-
+[m04v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=066b182d-96ce-4342-8caf-aaf6012d3604
+[m04v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8274d5e9-e8c5-4630-ae52-aaf60133c462
+[m04v05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f2159f5b-76b9-443c-a4a2-aaf601381275
+[m04v06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=73a75b6b-821c-4e73-90fa-aaf6013fca85
+[m04v07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0eaf8199-e634-47d9-97f4-aaf6014c67a1
+[m04v08]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e19d457b-4de1-4b0b-9576-aaf601707986
