--- a/modules/5507-05-hw.md
+++ b/modules/5507-05-hw.md
@@ -8,17 +8,44 @@ title: "MEDB 5507, Introduction to SAS, Module05, Homework"
 
 Graded: 3 points, one point deducted if submitted late.
 
-Download the following files
+Your homework assignment will use a data set of housing prices and factors that influence the price.
 
-Submit your work [here]()
+I originally found this data set on the DASL web site, but it has disappeared on me. A nice description of this file is on my own website:
+
+http://www.pmean.com/00files/housing.htm
+
++ Read in the data housing.txt.
+
++ Convert the asterisks in the AGE and TAX variables to missing. How many missing values are there for AGE and for TAX?
+
++ Create factors for NE, CUST, and COR. Draw bar charts for each of these factors.
+
++ Find the largest house (biggest SQFT) in the data set. Is the largest house also the most expensive house?
+
++ Calculate frequency counts for FEATS. Are there any houses with the no features? Are there any houses with every possible feature (11)?
+
++ Evaluate the relationship between PRICE and SQFT using a scatterplot. Include a smooth curve. Do larger houses tend to cost more?
+
++ Evaluate the relationship between  CUST and PRICE using a boxplot. Calculate the mean price and standard deviation by CUST.
+
++ What is the difference in average prices between northeast houses and other houses? What is the difference in average taxes?
+
++ Are custom built houses more likely to appear on corner lots? Calculate the percentages. [Please note that in the video, I asked for a relative risk. Don't bother with this. A percentage is more than enough.]
 
 #### Discuss05
 
 Graded: 3 points, one point deduction if submitted after the deadline.
 
-Submit your comments [here]().
+I'd like some brief feedback to the videos you just watched. Keep it short. One or two sentences per question is fine. You can also say something briefer like "I agree with [other student]". If you found everything confusing or nothing confusing, just respond with the word "everything" or "nothing." Please don't spend more than a minute on this assignment. I just want a quick reaction.
+
+1. What was the most important thing you learned in these videos?
+
+2. What was the one thing that you found confusing?
+
+3. What would you like to see covered next?
 
 #### Quiz05
 
 Graded: 3 points, one point deducted if submitted late.
 
+Not yet available.
