--- a/modules/5507-05-videos.md
+++ b/modules/5507-05-videos.md
@@ -6,38 +6,12 @@ date: Created 2021-05-29
 
 ### Videos and handouts, Module05
 
-#### M05-V01. Introduction to Structured Query Language
+#### M05-V01. A mix of categorical and continuous variables
 
 + Video available in [Panopto format][m05v01]
 + Slides available in [pdf format][git1]
 
-#### M05-V03. Sorting and restricting data, 24 minutes
+[git1]: https://umkc.instructure.com/courses/68719/modules/items/1002201
 
-+ Video available in [Panopto format][m05v02]
-+ Slides available in [pdf format][git2]
-
-#### M05-V03. The WHERE keyword, 24 minutes
-
-+ Video available in [Panopto format][m05V03]
-+ Slides and speakers notes are available in [pdf format][git3]
-
-#### M05-V04. Good documentation, 25 minutes
-
-+ Video available in [Panopto format][m05v04]
-+ Slides are not yet available
-
-#### M05-V05. Data dictionary, 9 minutes
-
-+ Video available in [Panopto format][m05v05]
-+ Slides and speakers notes are not yet available
-
-[git1]: https://github.com/pmean/introduction-to-sas/blob/master/results/m05-v01-introduction.pdf
-[git2]: https://github.com/pmean/introduction-to-sas/blob/master/results/m05-v02-sorting-restricting.pdf
-[git3]: https://github.com/pmean/introduction-to-sas/blob/master/results/m05-v03-where.pdf
-
-[m05v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
-[m05v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
-[m05v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
-[m05v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
-[m05V05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
+[m05v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e121e14a-2bc8-47ff-821e-aa920138690b
 
