--- a/modules/5507-06-hw.md
+++ b/modules/5507-06-hw.md
@@ -2,23 +2,4 @@
 title: "MEDB 5507, Introduction to SAS, Module06, Homework"
 ---
 
-### Assignments, due start of week 14
-
-#### Hw06
-
-Graded: 3 points, one point deducted if submitted late.
-
-Download the following files
-
-Submit your work [here]()
-
-#### Discuss06
-
-Graded: 3 points, one point deduction if submitted after the deadline.
-
-Submit your comments [here]().
-
-#### Quiz06
-
-Graded: 3 points, one point deducted if submitted late.
-
+### No homework, no discussion, no quiz!!!
