--- a/modules/5507-06-videos.md
+++ b/modules/5507-06-videos.md
@@ -6,38 +6,57 @@ date: Created 2021-05-29
 
 ### Videos and handouts, Module06
 
-#### M06-V01. Introduction to Structured Query Language
+#### M06-V01. Documentation header, 20 minutes
 
-+ Video available in [Panopto format][m06v01]
-+ Slides available in [pdf format][git1]
++ Video available in [Panopto format][doc1]
++ Slides not yet available.
 
-#### M06-V03. Sorting and restricting data, 24 minutes
+#### M06-V02. Data dictionary, 7 minutes
 
-+ Video available in [Panopto format][m06v02]
-+ Slides available in [pdf format][git2]
++ Video available in [Panopto format][dat1]
++ Slides not yet available.
 
-#### M06-V03. The WHERE keyword, 24 minutes
+#### M06-V03. Good computing practices, Part 1, 23 minutes
 
-+ Video available in [Panopto format][m06V03]
-+ Slides and speakers notes are available in [pdf format][git3]
++ Video available in [Panopto format][gcp1]
++ Slides not yet available.
 
-#### M06-V04. Good documentation, 25 minutes
+#### M06-V04. Good computing practices, Part 2, 13 minutes
 
-+ Video available in [Panopto format][m06v04]
-+ Slides are not yet available
++ Video available in [Panopto format][gcp2]
++ Slides not yet available.
 
-#### M06-V05. Data dictionary, 9 minutes
+#### M06-V05. Good computing practices, Part 3, 11 minutes
 
-+ Video available in [Panopto format][m06v05]
-+ Slides and speakers notes are not yet available
++ Video available in [Panopto format][gcp3]
++ Slides not yet available.
 
-[git1]: https://github.com/pmean/introduction-to-sas/blob/master/results/m06-v01-introduction.pdf
-[git2]: https://github.com/pmean/introduction-to-sas/blob/master/results/m06-v02-sorting-restricting.pdf
-[git3]: https://github.com/pmean/introduction-to-sas/blob/master/results/m06-v03-where.pdf
+#### M06-V06. Good computing practices, Part 4, 8 minutes
 
-[m06v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
-[m06v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
-[m06v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
-[m06v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
-[m06V05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=
++ Video available in [Panopto format][gcp4]
++ Slides not yet available.
 
+#### M06-V07. Good computing practices, Part 5, 11 minutes
+
++ Video available in [Panopto format][gcp5]
++ Slides not yet available.
+
+#### M06-V08. Good computing practices, Part 6, 20 minutes
+
++ Video available in [Panopto format][gcp6]
++ Slides not yet available.
+
+#### M06-V09. Good computing practices, Part 7, 14 minutes
+
++ Video available in [Panopto format][gcp7]
++ Slides not yet available.
+
+[doc1]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7d2c7fa4-8d74-45d2-a5ce-aa920149c1cb
+[dat1]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1aea13b5-e635-42df-9227-aa92015cdc9b
+[gcp1]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cf0d09-3647-4135-8354-ab1901530b60
+[gcp2]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c4813050-49b8-4ff3-a649-ab190159a79c
+[gcp3]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=88c130ee-7317-490f-b6af-ab19015daa71
+[gcp4]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=4fb06e69-fb02-429b-bb08-ab1901610c71
+[gcp5]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ddc5da52-8300-4f12-996e-ab1901641800
+[gcp6]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=681ca99d-55bf-4c7c-a1e4-ab190167c797
+[gcp7]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=31ad3ca7-2db7-4d1d-a5a8-ab19016db1c6
