Moved more module01 programs

--- a/modules/5507-06-videos.md
+++ b/modules/5507-06-videos.md
@@ -6,53 +6,51 @@ date: Created 2021-05-29
 
 ### Videos and handouts, Module06
 
-#### M06-V01. Documentation header, 20 minutes
-
-+ Video available in [Panopto format][doc1]
-+ Slides not yet available.
-
-#### M06-V02. Data dictionary, 7 minutes
-
-+ Video available in [Panopto format][dat1]
-+ Slides not yet available.
-
-#### M06-V03. Good computing practices, Part 1, 23 minutes
+#### GCP-V01. Good computing practices, Part 1, 23 minutes
 
 + Video available in [Panopto format][gcp1]
 + Slides not yet available.
 
-#### M06-V04. Good computing practices, Part 2, 13 minutes
+#### GCP-V02. Good computing practices, Part 2, 13 minutes
 
 + Video available in [Panopto format][gcp2]
 + Slides not yet available.
 
-#### M06-V05. Good computing practices, Part 3, 11 minutes
+#### GCP-V03. Good computing practices, Part 3, 11 minutes
 
 + Video available in [Panopto format][gcp3]
 + Slides not yet available.
 
-#### M06-V06. Good computing practices, Part 4, 8 minutes
+#### GCP-V04. Good computing practices, Part 4, 8 minutes
 
 + Video available in [Panopto format][gcp4]
 + Slides not yet available.
 
-#### M06-V07. Good computing practices, Part 5, 11 minutes
+#### GCP-V05. Good computing practices, Part 5, 11 minutes
 
 + Video available in [Panopto format][gcp5]
 + Slides not yet available.
 
-#### M06-V08. Good computing practices, Part 6, 20 minutes
+#### GCP-V06. Good computing practices, Part 6, 20 minutes
 
 + Video available in [Panopto format][gcp6]
 + Slides not yet available.
 
-#### M06-V09. Good computing practices, Part 7, 14 minutes
+#### GCP-V07. Good computing practices, Part 7, 14 minutes
 
 + Video available in [Panopto format][gcp7]
 + Slides not yet available.
 
-[doc1]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7d2c7fa4-8d74-45d2-a5ce-aa920149c1cb
-[dat1]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1aea13b5-e635-42df-9227-aa92015cdc9b
+#### GCP-V08. Documentation header, 20 minutes
+
++ Video available in [Panopto format][gcp8]
++ Slides not yet available.
+
+#### GCP-V09. Data dictionary, 7 minutes
+
++ Video available in [Panopto format][gcp9]
++ Slides not yet available.
+
 [gcp1]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cf0d09-3647-4135-8354-ab1901530b60
 [gcp2]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c4813050-49b8-4ff3-a649-ab190159a79c
 [gcp3]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=88c130ee-7317-490f-b6af-ab19015daa71
@@ -60,3 +58,5 @@ date: Created 2021-05-29
 [gcp5]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ddc5da52-8300-4f12-996e-ab1901641800
 [gcp6]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=681ca99d-55bf-4c7c-a1e4-ab190167c797
 [gcp7]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=31ad3ca7-2db7-4d1d-a5a8-ab19016db1c6
+[gcp8]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7d2c7fa4-8d74-45d2-a5ce-aa920149c1cb
+[gcp9]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1aea13b5-e635-42df-9227-aa92015cdc9b
